# -

./: .gitignore  LICENSE  README.md  build.gradle  gradlew  gradlew.bat  settings.gradle
.github/workflows/: build.yml
app/: build.gradle  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/dict/: dict_base.json  dict_dialect.json  dict_movie.json  dict_popular.json
app/src/main/cpp/: CMakeLists.txt  audio_processor.cpp
app/src/main/java/com/tzphxlf/voicetype/common/: DeviceUtils.java
app/src/main/java/com/tzphxlf/voicetype/ime/: VoiceTypeIME.java
app/src/main/java/com/tzphxlf/voicetype/ime/dictionary/: DictionaryManager.java
app/src/main/java/com/tzphxlf/voicetype/ime/keyboard/: KeyboardController.java  TvKeyboardView.java
app/src/main/java/com/tzphxlf/voicetype/ime/model/: DictEntry.java  DictUpdateInfo.java
app/src/main/java/com/tzphxlf/voicetype/ime/settings/: SettingsActivity.java
app/src/main/java/com/tzphxlf/voicetype/ime/voice/: AudioProcessor.java  (+2 more)
app/src/main/res/drawable/: candidate_background.xml  ic_launcher_background.xml  ic_launcher_foreground.xml  key_background.xml  key_special_background.xml  key_voice_background.xml  keyboard_background.xml  num_key_background.xml
app/src/main/res/layout/: activity_settings.xml  keyboard_view.xml
app/src/main/res/mipmap-hdpi/: ic_banner.xml
app/src/main/res/values/: colors.xml  dimens.xml  strings.xml  styles.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/xml/: keyboard_layout.xml  method.xml  settings_prefs.xml
dict/: version.json
